[gd_scene load_steps=66 format=3 uid="uid://bn1qu4rywsbx5"]

[ext_resource type="Script" path="res://scripts/mini_boss_level_python.gd" id="1_5qc52"]
[ext_resource type="Script" path="res://scripts/block_area.gd" id="2_x1sro"]
[ext_resource type="Texture2D" uid="uid://c1igykshqgeu2" path="res://images/mini_boss_python/__round_droid_dead_000.png" id="3_xblky"]
[ext_resource type="Texture2D" uid="uid://dk3jrv24l3vsf" path="res://images/mini_boss_python/__round_droid_dead_001.png" id="4_scilq"]
[ext_resource type="Texture2D" uid="uid://6m8gbi7f7cuy" path="res://images/mini_boss_python/__round_droid_dead_002.png" id="5_5gdy7"]
[ext_resource type="Texture2D" uid="uid://cqr756wgdop60" path="res://images/mini_boss_python/__round_droid_dead_003.png" id="6_osubv"]
[ext_resource type="Texture2D" uid="uid://tblcwbarpc4a" path="res://images/mini_boss_python/__round_droid_dead_004.png" id="7_a5cma"]
[ext_resource type="Texture2D" uid="uid://cnnojtn5pav60" path="res://images/mini_boss_python/__round_droid_dead_005.png" id="8_3b78u"]
[ext_resource type="Texture2D" uid="uid://b3c4tecbixkc3" path="res://images/mini_boss_python/__round_droid_dead_006.png" id="9_8jrjr"]
[ext_resource type="Texture2D" uid="uid://k7kk08q84gxb" path="res://images/mini_boss_python/__round_droid_dead_007.png" id="10_xqn8h"]
[ext_resource type="Texture2D" uid="uid://drn0260inojue" path="res://images/mini_boss_python/__round_droid_dead_008.png" id="11_e0tpq"]
[ext_resource type="Texture2D" uid="uid://qibo11a2u6w3" path="res://images/mini_boss_python/__round_droid_dead_009.png" id="12_mjsf7"]
[ext_resource type="Texture2D" uid="uid://cg3gj2toeuxd4" path="res://images/mini_boss_python/__round_droid_activated_idle_000.png" id="13_hltku"]
[ext_resource type="Texture2D" uid="uid://b0ifpgufqa3lv" path="res://images/mini_boss_python/__round_droid_activated_idle_001.png" id="14_akn6h"]
[ext_resource type="Texture2D" uid="uid://djtpmsa6uca4l" path="res://images/mini_boss_python/__round_droid_activated_idle_002.png" id="15_qj6od"]
[ext_resource type="Texture2D" uid="uid://cida65bkk2084" path="res://images/mini_boss_python/__round_droid_activated_idle_003.png" id="16_7dovp"]
[ext_resource type="Texture2D" uid="uid://crxntjxwro1y3" path="res://images/mini_boss_python/__round_droid_activated_idle_004.png" id="17_g70hi"]
[ext_resource type="Texture2D" uid="uid://df7kknp0h07a5" path="res://images/mini_boss_python/__round_droid_activated_idle_005.png" id="18_lwtvs"]
[ext_resource type="Texture2D" uid="uid://ddqugdba6l620" path="res://images/mini_boss_python/__round_droid_activated_idle_006.png" id="19_qckoc"]
[ext_resource type="Texture2D" uid="uid://cmjdfw4ovkw83" path="res://images/mini_boss_python/__round_droid_activated_idle_007.png" id="20_kl62g"]
[ext_resource type="Texture2D" uid="uid://gvevsqd6jb3s" path="res://images/mini_boss_python/__round_droid_activated_idle_008.png" id="21_6kvw6"]
[ext_resource type="Texture2D" uid="uid://cm6hjvjq5q17d" path="res://images/mini_boss_python/__round_droid_activated_idle_009.png" id="22_kbvvr"]
[ext_resource type="Texture2D" uid="uid://c2n633rexfuq1" path="res://images/mini_boss_python/__round_droid_activated_idle_010.png" id="23_7w8p3"]
[ext_resource type="Texture2D" uid="uid://cvrm334xo40s0" path="res://images/mini_boss_python/__round_droid_activated_idle_011.png" id="24_go6s6"]
[ext_resource type="Texture2D" uid="uid://bk21kpt7ares0" path="res://images/mini_boss_python/__round_droid_activated_idle_012.png" id="25_nij27"]
[ext_resource type="Texture2D" uid="uid://bmswgc0x3hill" path="res://images/mini_boss_python/__round_droid_activated_idle_013.png" id="26_m5qk3"]
[ext_resource type="Texture2D" uid="uid://ypy571r875k7" path="res://images/mini_boss_python/__round_droid_activated_idle_014.png" id="27_s616f"]
[ext_resource type="Texture2D" uid="uid://cboiyytngb61o" path="res://images/mini_boss_python/__round_droid_activated_idle_015.png" id="28_hwyph"]
[ext_resource type="Texture2D" uid="uid://dd7p0oje7nbl6" path="res://images/mini_boss_python/__round_droid_activated_idle_016.png" id="29_pimws"]
[ext_resource type="Texture2D" uid="uid://da00s3o6lluyi" path="res://images/mini_boss_python/__round_droid_activated_idle_017.png" id="30_0yvfk"]
[ext_resource type="Texture2D" uid="uid://4oyd0uddm4m8" path="res://images/mini_boss_python/__round_droid_activated_idle_018.png" id="31_htu6v"]
[ext_resource type="Texture2D" uid="uid://di45q1ji87hgd" path="res://images/mini_boss_python/__round_droid_activated_idle_019.png" id="32_nv7hn"]
[ext_resource type="Texture2D" uid="uid://crrebt7ssun10" path="res://images/mini_boss_python/__round_droid_activated_shoot_000.png" id="33_jxrhv"]
[ext_resource type="Texture2D" uid="uid://qairg08spuwa" path="res://images/mini_boss_python/__round_droid_activated_shoot_001.png" id="34_r1g4y"]
[ext_resource type="Texture2D" uid="uid://dwtqb60o3syw4" path="res://images/mini_boss_python/__round_droid_activated_shoot_002.png" id="35_i2go7"]
[ext_resource type="Texture2D" uid="uid://b2aywbiwumnk0" path="res://images/mini_boss_python/__round_droid_activated_shoot_003.png" id="36_ey24d"]
[ext_resource type="Texture2D" uid="uid://btd5n01jlq5cv" path="res://images/mini_boss_python/__round_droid_activated_shoot_004.png" id="37_d7t1n"]
[ext_resource type="Texture2D" uid="uid://djtsqivtdj5uv" path="res://images/mini_boss_python/__round_droid_activated_shoot_005.png" id="38_8bcdd"]
[ext_resource type="Texture2D" uid="uid://svbj25wikdt7" path="res://images/mini_boss_python/__round_droid_activated_shoot_006.png" id="39_wgoc5"]
[ext_resource type="Texture2D" uid="uid://cv86jrifwyepa" path="res://images/mini_boss_python/__round_droid_activated_shoot_007.png" id="40_4bsk6"]
[ext_resource type="Texture2D" uid="uid://dgxaewtllg7xs" path="res://images/mini_boss_python/__round_droid_activated_shoot_008.png" id="41_w746e"]
[ext_resource type="Texture2D" uid="uid://cnm1xclj7f46v" path="res://images/mini_boss_python/__round_droid_activated_shoot_009.png" id="42_78a71"]
[ext_resource type="PackedScene" uid="uid://dutqe76oy7gik" path="res://scenes/boss_level_components/boss_level_window.tscn" id="43_jm4yh"]
[ext_resource type="Script" path="res://scripts/learning_material_scripts/python_level/quiz_code_pages/quiz_page_topic5.gd" id="44_8olqo"]
[ext_resource type="FontFile" uid="uid://b47jyqncn0ah1" path="res://fonts-and-music/fonts/quiz_code_pages_font/LibreBaskerville-Regular.ttf" id="45_vda5f"]
[ext_resource type="Script" path="res://scripts/learning_material_scripts/python_level/quiz_code_pages/python_code_page_topic5.gd" id="46_kge68"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cguhy"]
size = Vector2(963, 644)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4rqvw"]
size = Vector2(958, 640.75)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uvki5"]
size = Vector2(119.5, 643.5)

[sub_resource type="SpriteFrames" id="SpriteFrames_ebl7p"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_xblky")
}, {
"duration": 1.0,
"texture": ExtResource("4_scilq")
}, {
"duration": 1.0,
"texture": ExtResource("5_5gdy7")
}, {
"duration": 1.0,
"texture": ExtResource("6_osubv")
}, {
"duration": 1.0,
"texture": ExtResource("7_a5cma")
}, {
"duration": 1.0,
"texture": ExtResource("8_3b78u")
}, {
"duration": 1.0,
"texture": ExtResource("9_8jrjr")
}, {
"duration": 1.0,
"texture": ExtResource("10_xqn8h")
}, {
"duration": 1.0,
"texture": ExtResource("11_e0tpq")
}, {
"duration": 1.0,
"texture": ExtResource("12_mjsf7")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_hltku")
}, {
"duration": 1.0,
"texture": ExtResource("14_akn6h")
}, {
"duration": 1.0,
"texture": ExtResource("15_qj6od")
}, {
"duration": 1.0,
"texture": ExtResource("16_7dovp")
}, {
"duration": 1.0,
"texture": ExtResource("17_g70hi")
}, {
"duration": 1.0,
"texture": ExtResource("18_lwtvs")
}, {
"duration": 1.0,
"texture": ExtResource("19_qckoc")
}, {
"duration": 1.0,
"texture": ExtResource("20_kl62g")
}, {
"duration": 1.0,
"texture": ExtResource("21_6kvw6")
}, {
"duration": 1.0,
"texture": ExtResource("22_kbvvr")
}, {
"duration": 1.0,
"texture": ExtResource("23_7w8p3")
}, {
"duration": 1.0,
"texture": ExtResource("24_go6s6")
}, {
"duration": 1.0,
"texture": ExtResource("25_nij27")
}, {
"duration": 1.0,
"texture": ExtResource("26_m5qk3")
}, {
"duration": 1.0,
"texture": ExtResource("27_s616f")
}, {
"duration": 1.0,
"texture": ExtResource("28_hwyph")
}, {
"duration": 1.0,
"texture": ExtResource("29_pimws")
}, {
"duration": 1.0,
"texture": ExtResource("30_0yvfk")
}, {
"duration": 1.0,
"texture": ExtResource("31_htu6v")
}, {
"duration": 1.0,
"texture": ExtResource("32_nv7hn")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [],
"loop": false,
"name": &"right_answer",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("33_jxrhv")
}, {
"duration": 1.0,
"texture": ExtResource("34_r1g4y")
}, {
"duration": 1.0,
"texture": ExtResource("35_i2go7")
}, {
"duration": 1.0,
"texture": ExtResource("36_ey24d")
}, {
"duration": 1.0,
"texture": ExtResource("37_d7t1n")
}, {
"duration": 1.0,
"texture": ExtResource("38_8bcdd")
}, {
"duration": 1.0,
"texture": ExtResource("39_wgoc5")
}, {
"duration": 1.0,
"texture": ExtResource("40_4bsk6")
}, {
"duration": 1.0,
"texture": ExtResource("41_w746e")
}, {
"duration": 1.0,
"texture": ExtResource("42_78a71")
}],
"loop": false,
"name": &"wrong_answer",
"speed": 8.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eocmm"]
bg_color = Color(0, 0.717647, 0.8, 1)

[sub_resource type="LabelSettings" id="LabelSettings_tu174"]
font = ExtResource("45_vda5f")
font_size = 20
font_color = Color(0.980392, 0.980392, 0.980392, 1)

[sub_resource type="LabelSettings" id="LabelSettings_8g3qe"]
font = ExtResource("45_vda5f")
font_size = 20
font_color = Color(0, 0.717647, 0.8, 1)

[sub_resource type="LabelSettings" id="LabelSettings_e0svr"]
font = ExtResource("45_vda5f")
font_size = 20

[sub_resource type="LabelSettings" id="LabelSettings_dv4lf"]
font = ExtResource("45_vda5f")
font_size = 20
font_color = Color(1, 1, 1, 0.615686)

[sub_resource type="Animation" id="Animation_kivbn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../feedback_conatiner/panel_container/panel2/feedback_container/feedback_label:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_5hlbm"]
resource_name = "text_animation"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../feedback_conatiner/panel_container/panel2/feedback_container/feedback_label:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xycbe"]
_data = {
"RESET": SubResource("Animation_kivbn"),
"text_animation": SubResource("Animation_5hlbm")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2riv2"]
bg_color = Color(0, 0.717647, 0.8, 1)

[sub_resource type="Animation" id="Animation_2vdb3"]
length = 0.001

[sub_resource type="Animation" id="Animation_fv11m"]
resource_name = "block_area"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("boss_encounter_area/boss_level_window:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-566, -538), Vector2(-576, -538), Vector2(-556, -538), Vector2(-606, -538), Vector2(-576, -538), Vector2(-566, -538)]
}

[sub_resource type="Animation" id="Animation_j55cl"]
resource_name = "display_window"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("boss_encounter_area/boss_level_window:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_cwsnv"]
resource_name = "dissolve_window"
length = 2.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("boss_encounter_area/boss_level_window:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_bqsxn"]
resource_name = "quiz_to_code"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("boss_encounter_area/boss_level_window/quiz_page:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("boss_encounter_area/boss_level_window/python_code_page:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.5, 2.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vb8hw"]
_data = {
"RESET": SubResource("Animation_2vdb3"),
"block_area": SubResource("Animation_fv11m"),
"display_window": SubResource("Animation_j55cl"),
"dissolve_window": SubResource("Animation_cwsnv"),
"quiz_to_code": SubResource("Animation_bqsxn")
}

[node name="mini_boss_intro_topic1" type="Node2D"]
position = Vector2(567, 589)
script = ExtResource("1_5qc52")

[node name="block_area" type="StaticBody2D" parent="."]
script = ExtResource("2_x1sro")

[node name="area_2d" type="Area2D" parent="block_area"]

[node name="collision_shape_2d" type="CollisionShape2D" parent="block_area/area_2d"]
show_behind_parent = true
position = Vector2(39.5, -267)
shape = SubResource("RectangleShape2D_cguhy")
debug_color = Color(0.992157, 0, 0.278431, 0.0352941)

[node name="collision_shape_2d" type="CollisionShape2D" parent="block_area"]
show_behind_parent = true
position = Vector2(40, -266.625)
shape = SubResource("RectangleShape2D_4rqvw")
debug_color = Color(1, 0.243137, 0.27451, 0.341176)

[node name="boss_encounter_area" type="Area2D" parent="."]

[node name="collision_shape_2d" type="CollisionShape2D" parent="boss_encounter_area"]
show_behind_parent = true
position = Vector2(-506.75, -268)
shape = SubResource("RectangleShape2D_uvki5")

[node name="animated_sprite_2d" type="AnimatedSprite2D" parent="boss_encounter_area"]
position = Vector2(367.5, -146.5)
scale = Vector2(0.341687, 0.34202)
sprite_frames = SubResource("SpriteFrames_ebl7p")
animation = &"idle"
autoplay = "idle"

[node name="boss_level_window" parent="boss_encounter_area" instance=ExtResource("43_jm4yh")]
modulate = Color(1, 1, 1, 0)
show_behind_parent = true
offset_left = -566.0
offset_top = -538.0
offset_right = 588.0
offset_bottom = 110.0
scale = Vector2(0.8, 0.8)
metadata/_edit_group_ = true

[node name="quiz_page" type="Control" parent="boss_encounter_area/boss_level_window"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -3.0
offset_top = 2.0
offset_right = -4.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("44_8olqo")

[node name="background_color" type="ColorRect" parent="boss_encounter_area/boss_level_window/quiz_page"]
layout_mode = 0
offset_left = 6.0
offset_right = 1155.0
offset_bottom = 720.0
color = Color(1, 1, 1, 0)

[node name="question_container" type="VBoxContainer" parent="boss_encounter_area/boss_level_window/quiz_page/background_color"]
clip_contents = true
layout_mode = 1
anchors_preset = -1
offset_left = 107.0
offset_top = 168.0
offset_right = 1080.0
offset_bottom = 261.0
metadata/_edit_group_ = true

[node name="question_label" type="RichTextLabel" parent="boss_encounter_area/boss_level_window/quiz_page/background_color/question_container"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_fonts/bold_font = ExtResource("45_vda5f")
theme_override_font_sizes/normal_font_size = 25
bbcode_enabled = true

[node name="options_container" type="VBoxContainer" parent="boss_encounter_area/boss_level_window/quiz_page/background_color"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.466132
anchor_top = 0.5
anchor_right = 0.521833
anchor_bottom = 0.5
offset_left = -211.586
offset_top = -150.36
offset_right = 172.414
offset_bottom = 123.64
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.1, 1.1)
alignment = 1
metadata/_edit_group_ = true
metadata/_edit_use_anchors_ = true

[node name="option_button1" type="Button" parent="boss_encounter_area/boss_level_window/quiz_page/background_color/options_container"]
layout_mode = 2
theme_override_fonts/font = ExtResource("45_vda5f")
theme_override_font_sizes/font_size = 19
clip_text = true
icon_alignment = 1
expand_icon = true

[node name="option_button2" type="Button" parent="boss_encounter_area/boss_level_window/quiz_page/background_color/options_container"]
layout_mode = 2
theme_override_fonts/font = ExtResource("45_vda5f")
theme_override_font_sizes/font_size = 19
clip_text = true
expand_icon = true

[node name="option_button3" type="Button" parent="boss_encounter_area/boss_level_window/quiz_page/background_color/options_container"]
layout_mode = 2
theme_override_fonts/font = ExtResource("45_vda5f")
theme_override_font_sizes/font_size = 19
clip_text = true
expand_icon = true

[node name="option_button4" type="Button" parent="boss_encounter_area/boss_level_window/quiz_page/background_color/options_container"]
layout_mode = 2
theme_override_fonts/font = ExtResource("45_vda5f")
theme_override_font_sizes/font_size = 19
clip_text = true
expand_icon = true

[node name="health_bar" type="ProgressBar" parent="boss_encounter_area/boss_level_window"]
layout_mode = 0
offset_left = 859.0
offset_top = 31.0
offset_right = 1119.0
offset_bottom = 58.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/background = SubResource("StyleBoxFlat_eocmm")

[node name="python_code_page" type="Control" parent="boss_encounter_area/boss_level_window"]
modulate = Color(1, 1, 1, 0)
layout_direction = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -11.0
offset_top = -1.0
offset_right = -2.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("46_kge68")

[node name="background_color" type="ColorRect" parent="boss_encounter_area/boss_level_window/python_code_page"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2.0
offset_top = 25.0
offset_right = -14.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(1, 1, 1, 0)

[node name="code_container" type="VBoxContainer" parent="boss_encounter_area/boss_level_window/python_code_page/background_color"]
clip_contents = true
layout_direction = 1
layout_mode = 2
offset_left = 31.0
offset_top = 44.0
offset_right = 851.0
offset_bottom = 597.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="problem_container" type="VBoxContainer" parent="boss_encounter_area/boss_level_window/python_code_page/background_color/code_container"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1

[node name="problem_label" type="Label" parent="boss_encounter_area/boss_level_window/python_code_page/background_color/code_container/problem_container"]
layout_direction = 1
layout_mode = 2
size_flags_vertical = 3
text = "Problem:Square user-input numbers using a function"
label_settings = SubResource("LabelSettings_tu174")

[node name="panel" type="Panel" parent="boss_encounter_area/boss_level_window/python_code_page/background_color/code_container"]
layout_mode = 2
size_flags_vertical = 3

[node name="line_num_container" type="HBoxContainer" parent="boss_encounter_area/boss_level_window/python_code_page/background_color/code_container/panel"]
layout_mode = 0
offset_left = 21.0
offset_top = 20.0
offset_right = 44.0
offset_bottom = 503.0

[node name="line_number" type="Label" parent="boss_encounter_area/boss_level_window/python_code_page/background_color/code_container/panel/line_num_container"]
layout_direction = 1
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0.639216, 0.94902, 1)
theme_override_font_sizes/font_size = 19
text = "1

2

3

4

5

6"
label_settings = SubResource("LabelSettings_8g3qe")

[node name="code_template_conatiner" type="HBoxContainer" parent="boss_encounter_area/boss_level_window/python_code_page/background_color/code_container/panel"]
layout_mode = 0
offset_left = 52.0
offset_top = 20.0
offset_right = 708.0
offset_bottom = 480.0

[node name="code_template_label" type="Label" parent="boss_encounter_area/boss_level_window/python_code_page/background_color/code_container/panel/code_template_conatiner"]
layout_direction = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 100
text = "                  square(number)     

       return 

# Take the user input and convert it to float

num =                                 (\"Enter a number to square: \")

# Call the 'square' function and display the square of the number

print(f\"The square of {num} is {                                  }.\")"
label_settings = SubResource("LabelSettings_e0svr")

[node name="player_answer" type="LineEdit" parent="boss_encounter_area/boss_level_window/python_code_page/background_color/code_container/panel"]
layout_mode = 2
offset_left = 48.0
offset_top = 19.0
offset_right = 149.0
offset_bottom = 48.0
theme_override_fonts/font = ExtResource("45_vda5f")

[node name="player_answer2" type="LineEdit" parent="boss_encounter_area/boss_level_window/python_code_page/background_color/code_container/panel"]
layout_mode = 2
offset_left = 325.0
offset_top = 20.0
offset_right = 403.0
offset_bottom = 50.0
theme_override_fonts/font = ExtResource("45_vda5f")

[node name="player_answer3" type="LineEdit" parent="boss_encounter_area/boss_level_window/python_code_page/background_color/code_container/panel"]
layout_mode = 2
offset_left = 170.0
offset_top = 78.0
offset_right = 450.0
offset_bottom = 107.0
theme_override_fonts/font = ExtResource("45_vda5f")

[node name="player_answer4" type="LineEdit" parent="boss_encounter_area/boss_level_window/python_code_page/background_color/code_container/panel"]
layout_mode = 2
offset_left = 131.0
offset_top = 191.0
offset_right = 301.0
offset_bottom = 220.0
theme_override_fonts/font = ExtResource("45_vda5f")

[node name="player_answer5" type="LineEdit" parent="boss_encounter_area/boss_level_window/python_code_page/background_color/code_container/panel"]
layout_mode = 2
offset_left = 613.0
offset_top = 191.0
offset_right = 691.0
offset_bottom = 220.0
theme_override_fonts/font = ExtResource("45_vda5f")

[node name="player_answer6" type="LineEdit" parent="boss_encounter_area/boss_level_window/python_code_page/background_color/code_container/panel"]
layout_mode = 2
offset_left = 375.0
offset_top = 306.0
offset_right = 558.0
offset_bottom = 339.0
theme_override_fonts/font = ExtResource("45_vda5f")

[node name="feedback_conatiner" type="VBoxContainer" parent="boss_encounter_area/boss_level_window/python_code_page/background_color"]
layout_mode = 2
offset_left = 868.0
offset_top = 98.0
offset_right = 1128.0
offset_bottom = 597.0

[node name="panel_container" type="HBoxContainer" parent="boss_encounter_area/boss_level_window/python_code_page/background_color/feedback_conatiner"]
layout_direction = 1
layout_mode = 2
size_flags_vertical = 3

[node name="panel2" type="Panel" parent="boss_encounter_area/boss_level_window/python_code_page/background_color/feedback_conatiner/panel_container"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="feedback_container" type="VBoxContainer" parent="boss_encounter_area/boss_level_window/python_code_page/background_color/feedback_conatiner/panel_container/panel2"]
layout_mode = 0
offset_left = 17.0
offset_top = 14.0
offset_right = 240.0
offset_bottom = 486.0

[node name="feedback_label" type="Label" parent="boss_encounter_area/boss_level_window/python_code_page/background_color/feedback_conatiner/panel_container/panel2/feedback_container"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0.639216, 0.94902, 0.431373)
label_settings = SubResource("LabelSettings_dv4lf")
autowrap_mode = 3

[node name="animation_player" type="AnimationPlayer" parent="boss_encounter_area/boss_level_window/python_code_page/background_color/feedback_conatiner/panel_container/panel2/feedback_container"]
root_node = NodePath("../../../../../run_button_conatiner")
reset_on_save = false
libraries = {
"": SubResource("AnimationLibrary_xycbe")
}

[node name="run_button_conatiner" type="VBoxContainer" parent="boss_encounter_area/boss_level_window/python_code_page/background_color"]
layout_mode = 2
offset_left = 1014.0
offset_top = 50.0
offset_right = 1122.0
offset_bottom = 90.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.09

[node name="run_button" type="Button" parent="boss_encounter_area/boss_level_window/python_code_page/background_color/run_button_conatiner"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("45_vda5f")
theme_override_styles/normal = SubResource("StyleBoxFlat_2riv2")
text = "Run"

[node name="animation_player" type="AnimationPlayer" parent="boss_encounter_area"]
process_priority = 2
root_node = NodePath("../..")
reset_on_save = false
libraries = {
"": SubResource("AnimationLibrary_vb8hw")
}

[connection signal="wrong_answer" from="boss_encounter_area/boss_level_window/quiz_page" to="." method="player_wrong_answer"]
[connection signal="wrong_answer" from="boss_encounter_area/boss_level_window/quiz_page" to="." method="_on_quiz_page_wrong_answer"]
[connection signal="pressed" from="boss_encounter_area/boss_level_window/quiz_page/background_color/options_container/option_button1" to="boss_encounter_area/boss_level_window/quiz_page" method="_on_option_button_1_pressed" flags=18]
[connection signal="pressed" from="boss_encounter_area/boss_level_window/quiz_page/background_color/options_container/option_button2" to="boss_encounter_area/boss_level_window/quiz_page" method="_on_option_button_2_pressed" flags=18]
[connection signal="pressed" from="boss_encounter_area/boss_level_window/quiz_page/background_color/options_container/option_button3" to="boss_encounter_area/boss_level_window/quiz_page" method="_on_option_button_3_pressed" flags=18]
[connection signal="pressed" from="boss_encounter_area/boss_level_window/quiz_page/background_color/options_container/option_button4" to="boss_encounter_area/boss_level_window/quiz_page" method="_on_option_button_4_pressed" flags=18]
[connection signal="all_correct" from="boss_encounter_area/boss_level_window/python_code_page" to="." method="_on_code_page_all_correct"]
[connection signal="pressed" from="boss_encounter_area/boss_level_window/python_code_page/background_color/run_button_conatiner/run_button" to="boss_encounter_area/boss_level_window/python_code_page" method="_on_run_button_pressed" flags=18]
